Fixed overflow

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,3 +1,7 @@
+* {
+    overflow: hidden;
+}
+
 .content {
     position: absolute;
     width: 1080px;
